--- a/src/app/Dashbord_admin/apprenant/apprenant.component.html
+++ b/src/app/Dashbord_admin/apprenant/apprenant.component.html
@@ -1,5 +1,41 @@
 <!-- <app-dashbord-statistique></app-dashbord-statistique> -->
 <app-header-dasboard></app-header-dasboard>
+
+<!-- statistique -->
+
+
+<div class="Container">
+  <div class="Container_Card">
+    <div class="Container_Card mt-5">
+      <div class="Card1">
+        <div class="cardbx1">
+          <i class='bx bxs-graduation'></i>
+          <div>
+            <p class="text-center">Apprenants</p>
+            <h5 class="text-center">{{tailleApprenant}}</h5>
+          </div>
+        </div>
+      </div>
+      <div class="Card1">
+        <div class="cardbx">
+          <i class='bx bx-user-pin'></i>
+          <div>
+            <p class="text-center">Enseignants</p>
+            <h5 class="text-center">{{tailleenseignant}}</h5>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+</div>
+
+
+<!-- stat   finnnn -->
 <div class="listeapprenent mt-5 mb-5">
   <div class="container">
   <div class="title text-center">
@@ -178,7 +214,7 @@
           <p class="text-black fw-bold"> {{emelementSelectioner.annee}}</p>
           <div class=" d-flex justify-content-around pt-4">
 
-          
+
 
               <button type="button" class="btn btn-secondary mb-4" data-bs-dismiss="modal">Close</button>
 
